Fix API errors in UserDao: handle empty result sets and empty parameter lists
Co-authored-by: SunJiiKhasar <240871860+SunJiiKhasar@users.noreply.github.com>